# OpenJarvis

./: .gitignore  README.md  ROADMAP.md  VISION.md  mkdocs.yml  pyproject.toml
.claude/rules/: evals.md  python-dev.md  rust-dev.md
.github/workflows/: ci.yml
desktop/src-tauri/: tauri.conf.json
desktop/src/components/: AgentsPanel.tsx
docs/: downloads.md  index.md
docs/architecture/: agents.md  design-principles.md  engine.md  memory.md  overview.md
docs/deployment/: api-server.md
docs/development/: changelog.md  contributing.md  roadmap.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/plans/: 2026-03-03-speech-to-text-design.md  2026-03-03-speech-to-text.md
docs/user-guide/: agents.md  cli.md  evaluations.md  python-sdk.md
evals/: __main__.py  cli.py  pyproject.toml
evals/backends/: jarvis_agent.py  jarvis_direct.py
evals/core/: dataset.py  runner.py  scorer.py  types.py
evals/datasets/: frames.py  gaia.py  supergpqa.py  wildchat.py
evals/scorers/: frames_judge.py  gaia_exact.py  supergpqa_mcq.py  wildchat_judge.py
evals/tests/: conftest.py  test_backends.py  test_frames.py  test_gaia.py  test_runner.py  test_supergpqa.py  test_types.py  test_wildchat.py
examples/deep_research/: research.py  research.toml
examples/messaging_hub/: messaging.toml
scripts/: publish_results.py  resolve_freebase_mids.py
src/openjarvis/: __init__.py  _rust_bridge.py  sdk.py  system.py
tests/: test_llm_optimizer.py
tests/operators/: test_operator_recipes.py  test_operators.py
tests/speech/: test_openai_whisper.py
(+50 files in other folders)
